--- a/E-Commerce.Core.Model/E-Commerce.Core.Model.csproj
+++ b/E-Commerce.Core.Model/E-Commerce.Core.Model.csproj
@@ -62,11 +62,21 @@
     <Compile Include="Entity\Status.cs" />
     <Compile Include="Entity\User.cs" />
     <Compile Include="Entity\UserAddress.cs" />
+    <Compile Include="Migrations\202312201041446_init.cs" />
+    <Compile Include="Migrations\202312201041446_init.designer.cs">
+      <DependentUpon>202312201041446_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202312201041446_init.resx">
+      <DependentUpon>202312201041446_init.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
