--- a/E-Commerce.Core.Model/E-Commerce.Core.Model.csproj
+++ b/E-Commerce.Core.Model/E-Commerce.Core.Model.csproj
@@ -66,6 +66,10 @@
     <Compile Include="Migrations\202312201041446_init.designer.cs">
       <DependentUpon>202312201041446_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202312221235010_productfix.cs" />
+    <Compile Include="Migrations\202312221235010_productfix.designer.cs">
+      <DependentUpon>202312221235010_productfix.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -76,6 +80,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202312201041446_init.resx">
       <DependentUpon>202312201041446_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202312221235010_productfix.resx">
+      <DependentUpon>202312221235010_productfix.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
