--- a/E-Commerce.UI.WEB/E-Commerce.UI.WEB.csproj
+++ b/E-Commerce.UI.WEB/E-Commerce.UI.WEB.csproj
@@ -1259,6 +1259,7 @@
     <Compile Include="Areas\Admin\AdminAreaRegistration.cs" />
     <Compile Include="Areas\Admin\AdminControllerBase.cs" />
     <Compile Include="Areas\Admin\Controllers\AdminLoginController.cs" />
+    <Compile Include="Areas\Admin\Controllers\AdminOrdersController.cs" />
     <Compile Include="Areas\Admin\Controllers\CategoriesController.cs" />
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
@@ -1380,6 +1381,11 @@
     <Content Include="Areas\Admin\Views\Products\Details.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Products\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminOrders\Create.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminOrders\Delete.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminOrders\Details.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminOrders\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\AdminOrders\Index.cshtml" />
     <None Include="packages.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
