--- a/E-Commerce.UI.WEB/E-Commerce.UI.WEB.csproj
+++ b/E-Commerce.UI.WEB/E-Commerce.UI.WEB.csproj
@@ -1252,6 +1252,40 @@
     <Content Include="Areas\Admin\AdminTheme\static\tracks\ff2381a011d29cefb3804436ed29f60b4faa63d6.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="Global.asax" />
+    <Content Include="Themefiles\assets\images\coin.png" />
+    <Content Include="Themefiles\assets\images\error.gif" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\advertrisement-vedio.mp4" />
+    <Content Include="Themefiles\assets\images\homepage-one\close-btn.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\icon.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\minus.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\order.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\payment-img-1.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\payment-img-2.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\payment-img-3.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\payment-img-4.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\plus.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-16.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-17.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\sallers-cover.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-1.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-2.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-3.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-4.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-5.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\seller-img\seller-img-6.png" />
+    <Content Include="Themefiles\assets\images\homepage-one\sidebar-img.png" />
+    <Content Include="Themefiles\assets\images\success.gif" />
+    <Content Include="Themefiles\assets\js\aos-3.0.0.js" />
+    <Content Include="Themefiles\assets\js\bootstrap_5.3.2.bundle.min.js" />
+    <Content Include="Themefiles\assets\js\jquery_3.7.1.min.js" />
+    <Content Include="Themefiles\assets\js\nouislider.min.js" />
+    <Content Include="Themefiles\assets\js\shopus.js" />
+    <Content Include="Themefiles\assets\js\swiper10-bundle.min.js" />
+    <Content Include="Themefiles\css\aos-3.0.0.css" />
+    <Content Include="Themefiles\css\bootstrap-5.3.2.min.css" />
+    <Content Include="Themefiles\css\nouislider.min.css" />
+    <Content Include="Themefiles\css\style.css" />
+    <Content Include="Themefiles\css\swiper10-bundle.min.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -1264,12 +1298,14 @@
     <Compile Include="Areas\Admin\Controllers\DefaultController.cs" />
     <Compile Include="Areas\Admin\Controllers\ProductsController.cs" />
     <Compile Include="Areas\Admin\Controllers\UsersController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Base\UserControllerBase.cs" />
     <Compile Include="Controllers\Base\UserLoginFilter.cs" />
     <Compile Include="Controllers\BasketController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
+    <Compile Include="Controllers\PayController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
@@ -1404,6 +1440,111 @@
     <Content Include="Views\Order\Detail.cshtml" />
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Test\Index.cshtml" />
+    <Content Include="Views\Shared\_Head.cshtml" />
+    <Content Include="Views\Shared\_Header.cshtml" />
+    <Content Include="Views\Shared\_Footer.cshtml" />
+    <Content Include="Themefiles\assets\.DS_Store" />
+    <Content Include="Themefiles\assets\images\homepage-one\404-error.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\about-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\about-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\about-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\about-img-4.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\blog-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\blog-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\blog-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\testimonial-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\testimonial-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\about\testimonial-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\aurthor-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\aurthor-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\aurthor-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-10.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-11.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-12.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-4.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-5.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-6.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-7.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-8.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\brand-img-9.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\baby.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\bags.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\cap.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\dresses.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\gift.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\glass.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\ring.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\shoes.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\sneakers.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\sweaters.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\category-img\watch.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\empty-cart.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\empty-wishlist.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\flash-sale.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\footer-bg.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\hero-slider-one.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\hero-slider-three.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\hero-slider-two.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\login-bg.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\newsletter.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-deal-.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-10.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-11.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-12.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-13.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-14.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-4.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-5.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-6.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-7.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-8.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-img-9.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-slider-img-1.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-slider-img-2.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\product-img\product-slider-img-3.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\reset.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\style-bg-four.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\style-bg-three.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\style-bg-two.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\syle-bg-one.webp" />
+    <Content Include="Themefiles\assets\images\homepage-one\upload.webp" />
+    <Content Include="Themefiles\assets\images\logos\footer-logo.webp" />
+    <Content Include="Themefiles\assets\images\logos\logo.webp" />
+    <Content Include="Themefiles\assets\sass\.DS_Store" />
+    <Content Include="Themefiles\assets\sass\components\_about.scss" />
+    <Content Include="Themefiles\assets\sass\components\_blogs.scss" />
+    <Content Include="Themefiles\assets\sass\components\_cart.scss" />
+    <Content Include="Themefiles\assets\sass\components\_category-brand.scss" />
+    <Content Include="Themefiles\assets\sass\components\_compaire.scss" />
+    <Content Include="Themefiles\assets\sass\components\_contact.scss" />
+    <Content Include="Themefiles\assets\sass\components\_faq.scss" />
+    <Content Include="Themefiles\assets\sass\components\_fashion-style.scss" />
+    <Content Include="Themefiles\assets\sass\components\_footer.scss" />
+    <Content Include="Themefiles\assets\sass\components\_global.scss" />
+    <Content Include="Themefiles\assets\sass\components\_header.scss" />
+    <Content Include="Themefiles\assets\sass\components\_hero.scss" />
+    <Content Include="Themefiles\assets\sass\components\_login-account.scss" />
+    <Content Include="Themefiles\assets\sass\components\_privacy.scss" />
+    <Content Include="Themefiles\assets\sass\components\_product-info.scss" />
+    <Content Include="Themefiles\assets\sass\components\_product-sidebar.scss" />
+    <Content Include="Themefiles\assets\sass\components\_products.scss" />
+    <Content Include="Themefiles\assets\sass\components\_seller.scss" />
+    <Content Include="Themefiles\assets\sass\components\_user-profile.scss" />
+    <Content Include="Themefiles\assets\sass\components\_variable.scss" />
+    <Content Include="Themefiles\assets\sass\pages\_index.scss" />
+    <Content Include="Themefiles\assets\sass\style.scss" />
+    <Content Include="Themefiles\css\style.css.map" />
+    <Content Include="Views\Shared\_HeaderLogin.cshtml" />
+    <Content Include="Views\Shared\_UserDashboardMenu.cshtml" />
+    <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Order\Chekout.cshtml" />
+    <Content Include="Views\Pay\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -1415,6 +1556,7 @@
     <Folder Include="App_Data\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Themefiles\assets\images\homepage-one\blog-img\" />
     <Folder Include="Views\UserLoginControllerBase\" />
   </ItemGroup>
   <ItemGroup>
